--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1>happy diwaliiiiiiiiiiiiiiiiiiii</h1>
     <div id="sectionhomepage">
         <div class="d-flex justify-content-center"> <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/software-developer-img.png" class="image1" /></div>
         <h1 class="heading1">My projects</h1>
